# runix

./: .gitignore  NAMINGSCHEME.md  README-agentic.md  README-instruct.md  README-newbie.md  README.md  cabal.project  flake.nix  howto-create-tasks-with-ai.md  llm-creatable-design.hs  runix.cabal  testtasks.md
app/: Main.hs
permissionshim/: permissionshim.cabal
permissionshim/src/: Polysemy.hs
runner/clirunner/: flake.nix
src/Runix/: Bash.hs  Cancellation.hs  Cmd.hs  Compiler.hs  Config.hs  Effects.hs  FileSystem.hs  Grep.hs  HTTP.hs  LLM.hs  LLMStream.hs  LLMTypes.hs  LangFuse.hs  Logging.hs  Openrouter.hs  RestAPI.hs  Runner.hs  Secret.hs  StreamChunk.hs  Streaming.hs  Time.hs  Tracing.hs
src/Runix/Bash/: Effects.hs
src/Runix/Cancellation/: Effects.hs
src/Runix/Cmd/: Effects.hs
src/Runix/Compiler/: Cabal.hs  Compiler.hs  Effects.hs
src/Runix/Compiler/LLMTypes/: LLMTypes.hs
src/Runix/Config/: Effects.hs
src/Runix/FileSystem/: Effects.hs  InMemory.hs  Path.hs  Simple.hs  System.hs
src/Runix/FileSystem/InMemory/: Effects.hs
src/Runix/FileSystem/Project/: Effects.hs
src/Runix/FileSystem/Simple/: Effects.hs
src/Runix/FileSystem/System/: Effects.hs
src/Runix/Grep/: Effects.hs
src/Runix/HTTP/: Effects.hs
src/Runix/LLM/: Anthropic.hs  Context.hs  Effects.hs  Interpreter.hs  Models.hs  OpenAI.hs  OpenAICompatible.hs  OpenAIUtils.hs  OpenRouter.hs  Openrouter.hs  Provider.hs  Streaming.hs  ToolExecution.hs  ToolInstances.hs  WithInfo.hs
src/Runix/LLM/Protocol/: Anthropic.hs  OpenAICompatible.hs
src/Runix/Logging/: Effects.hs
src/Runix/RestAPI/: Effects.hs  Streaming.hs
src/Runix/Safe/: Autodocodec.hs  Polysemy.hs
src/Runix/Secret/: Effects.hs
src/Runix/Streaming/: Effects.hs  SSE.hs
src/Runix/Tracing/: FileLog.hs  LangFuse.hs
tasks/dndwiki/src/: Dndwiki.hs
tasks/github/: flake.nix  github.cabal
tasks/github/src/: GitHub.hs
tasks/github/src/GitHub/: API.hs  Effects.hs
tasks/hello/: flake.nix  hello.cabal
tasks/hello/src/: Hello.hs
test/: ChrootTranslationSpec.hs  DummyFileSystemSpec.hs  FileSystemProjectSpec.hs  FileSystemSecurityProperties.hs  FileSystemSecuritySpec.hs  GrepSecuritySpec.hs  HTTPStreamingInterceptorSpec.hs  LLMProviderSpec.hs  LangFuseSpec.hs  Main.hs  OpenAIStreamingSpec.hs  PathResolutionSpec.hs  RestAPIStreamingSpec.hs  SSEParserSpec.hs  SSEToJSONSpec.hs
test-fixtures/: openai-reasoning-response.sse  openai-reasoning-with-tools-response.sse  openai-text-response.sse  openai-tool-call-response.sse  text-response.sse  thinking-only-response.sse  thinking-with-tools-response.sse  tool-call-response.sse
(+6 files in other folders)
