cabal-version:      3.0
name:               safe-polysemy
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             .newmind
maintainer:         git.newmind@newmind.pw
category:           Polysemy
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Polysemy

    build-depends:    base, polysemy >=1.9
    hs-source-dirs:   src
    default-language: Haskell2010