cabal-version: 2.4
name: github
version: 1.0.0
synopsis: GitHub integration package for Runix
description: 
  Provides GitHub domain operations and tasks for Runix.
  Includes repository management and GitHub API integration.
author: .newmind
license: MIT

library
  exposed-modules: 
    GitHub
  other-modules:
    GitHub.API
  build-depends: 
    base >= 4.14,
    runix,
    text,
    containers,
    time,
    bytestring,
    filepath,
    polysemy,
    aeson,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    DeriveGeneric,
    DeriveAnyClass,
    OverloadedStrings,
    GADTs,
    DataKinds,
    TypeOperators,
    FlexibleContexts
