cabal-version: 2.4
name: hello
version: 1.0.0
synopsis: Sample helloworld example for Runix
description: 
author: .newmind
license: MIT

library
  exposed-modules: 
    Hello
  build-depends: 
    base >= 4.14,
    runix,
    polysemy,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    DeriveGeneric,
    DeriveAnyClass,
    OverloadedStrings,
    GADTs,
    DataKinds,
    TypeOperators,
    FlexibleContexts
